<resources>
    <string name="app_name">Vamos Ajudar?</string>
    <string name="logo_vamos_ajudar_txt">logo_vamos_ajudar</string>
    <string name="txt_usuario">Usuário</string>
    <string name="txt_senha">Senha</string>
    <string name="txt_login">Entrar</string>
    <string name="txt_register">Registrar</string>
    <string name="txt_sem_registro">Entrar Sem Registro</string>
    <string name="txt_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="cancelar">CANCELAR</string>
    <string name="name_register_ong">Nome:</string>
    <string name="description_register_ong">Descrição:</string>
    <string name="goal_register_ong">Objetivo:</string>
    <string name="imagem_da_ong_detail">Imagem da Ong</string>
    <string name="ong_n_o_possui_pix_copia_e_cola">ong não possui pix copia e cola</string>
    <string name="nome_login">Nome</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="nome_de_usu_rio_login">Nome de usuário</string>
    <string name="registrar_login">Registrar</string>
    <string name="cancelar_login">Cancelar</string>
    <string name="titulo_ong_view">Titulo</string>
    <string name="descri_o_ong">Descrição</string>
    <string name="vamosajudar_register_ong">VamosAjudar</string>
    <string name="a_melhor_ong_register_ong">A melhor ong</string>
    <string name="ajudar_register_ong">Ajudar</string>
    <string name="endere_o_register_ong">Endereço:</string>
    <string name="confirmar">Confirmar</string>
    <string name="nav_open">Abrir</string>
    <string name="nav_close">Fechar</string>
    <string name="dado_invalido">DADO INVÁLIDO</string>
    <string name="pix">PIX:</string>
    <string name="email_telefone_chave_aleatoria">email, telefone, chave aleatoria, cpf</string>
    <string name="rua_str">Rua</string>
    <string name="num_str">Número</string>
    <string name="postal_code_str">CEP</string>
    <string name="state_str">Estado</string>
    <string name="contact_str">Contato:</string>
    <string name="email_str">Email</string>
    <string name="phone_number_str">(16) 12345-6789</string>
    <string name="website_str">www.vamosajudar.com.br</string>
    <string name="cidade">Cidade</string>
    <string name="pais_str">País</string>
    <string name="btn_adcionar_imagem">botão de adcionar imagem</string>
    <string name="deletar_ong">DELETAR ONG</string>
</resources>