<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_screen"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:elevation="8dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_wtht_bg"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_usuario"
                android:inputType="text"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_senha"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_login"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/secundary_green"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_register"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/secundary_green"
                android:textColor="@color/white" />



<!--            <TextView-->
<!--                android:id="@+id/textViewForgotPassword"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/txt_esqueceu_senha"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_marginBottom="16dp"-->
<!--                android:textColor="@android:color/black"-->
<!--                android:textStyle="italic" />-->

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
