<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.OngRegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_register_ong"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ongNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vamosajudar_register_ong"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description_register_ong"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ongDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a_melhor_ong_register_ong"
                android:padding="8dp"
                android:autofillHints="name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/goal_register_ong"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ongGoalEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ajudar_register_ong"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/endere_o_register_ong"
                android:textSize="18sp"
                android:textStyle="bold" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/ong_street"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="Rua"
                    android:padding="8dp"
                    android:autofillHints="postalAddress" />

                <EditText
                    android:id="@+id/ong_number_addresss"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="Número"
                    android:autofillHints="postalAddress"
                    android:padding="8dp" />
                <EditText
                    android:id="@+id/postal_code"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="CEP"
                    android:autofillHints="postalCode"
                    android:padding="8dp" />
                <EditText
                    android:id="@+id/estado"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:hint="Estado"
                    android:autofillHints="postalAddress"
                    android:padding="8dp" />
            </LinearLayout>

            <EditText

                android:id="@+id/cidade"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:hint="Cidade"
                android:autofillHints="postalAddress"
                android:padding="8dp" />

            <EditText

                android:id="@+id/pais"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:hint="País"
                android:autofillHints="postalAddress"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Contato:"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/email_id"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:hint="Email"
                android:autofillHints="emailAddress"
                android:padding="8dp" />

            <EditText

                android:id="@+id/phone_id"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="(16)99999-9999"
                android:autofillHints="phone"
                android:padding="8dp" />


            <EditText

                android:id="@+id/website_id"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="www.vamosajudar.com.br"
                android:autofillHints="name"
                android:padding="8dp" />




        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>






